--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ Objective: To display weather of specified city in celcius and fahrenheit-->
                 <p id="day"></p>
                 <p id="weatherName">Partly cloudy⛅</p>
                 <h2 id="temperature"></h2>
-                <button class="celcius" onclick="displayCelcius()">&#8451; |</button>
-                <button class="fahrenheit" onclick="display();">F</button>
+                <button id="celcius" onclick="displayCel()">&#8451; |</button>
+                <button id="fahrenheit" onclick="display()">F</button>
         
                 <!--To select city -->
                 <h4>Enter City Name :</h4>
