--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ Objective: To display weather of specified city in celcius and fahrenheit-->
         <!-- rightside display -->
         <div class="rightSide">
             <div id="showWeather">
-                <h1 id="cityName">Banglore</h1>,<h1 id="stateName">Kranataka</h1>
+                <h1 id="cityName"></h1>, <h1 id="stateName">Kranataka</h1>
                 <p id="day"></p>
-                <p id="weatherName">Partly cloudy⛅</p>
+                <p id="weatherName"></p>
                 <h2 id="temperature"></h2>
                 <button id="celcius" >&#8451; |</button>
                 <button id="fahrenheit" >F</button>
@@ -42,5 +42,7 @@ Objective: To display weather of specified city in celcius and fahrenheit-->
     </body>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="class.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- <script type="text/javascript" src="try.js"></script> -->
 
 </html>
