api call reduced

--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@ Objective: To display weather of specified city in celcius and fahrenheit-->
                     <h1 id="cityName">Banglore</h1>, <h1 id="stateName">Kranataka</h1>
                     <p id="day"></p>
                     <div>
-                        <p id="weatherName">Partly cloudy</p><img id="icon">
+                        <p id="weatherName">Partly cloudy</p><img id="icon" src="download.jpg">
                     </div>
                     <h2 id="temperature"></h2>
-                    <button id="celcius" >&#8451; |</button>
-                    <button id="fahrenheit" >F</button>
-            
+                    <button id="celcius">&#8451;</button> |
+                    <button id="fahrenheit">F</button>
                     <!--To select city -->
                     <h4>Enter City Name :</h4>
                     <input type="text" id="list"  name="cities" placeholder="Enter City" />
@@ -34,7 +33,6 @@ Objective: To display weather of specified city in celcius and fahrenheit-->
                 </div>
             </div>
         </div>
-        
     </body>
     <!-- <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="class.js"></script> -->
