--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ Objective: To display weather of specified city in celcius and fahrenheit-->
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- <meta charset='utf-8'> -->
-        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+        <meta charset='utf-8'>
+        <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
         <title>WeatherApp</title>
         <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
         <link href="style.css" rel="stylesheet">
@@ -21,7 +21,7 @@ Objective: To display weather of specified city in celcius and fahrenheit-->
                 <div id="showWeather">
                     <h1 id="cityName">Banglore</h1>, <h1 id="stateName">Kranataka</h1>
                     <p id="day"></p>
-                    <div>
+                    <div class="weather">
                         <p id="weatherName">Partly cloudy</p><img id="icon" src="download.jpg">
                     </div>
                     <h2 id="temperature"></h2>
