using class and object

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ Objective: To display weather of specified city in celcius and fahrenheit-->
             </div>
         </div>
     </body>
-    <!-- <script type="text/javascript" src="app.js"></script>
-    <script type="text/javascript" src="class.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="try.js"></script>
+    <script type="text/javascript" src="app1.js"></script>
+    <script type="text/javascript" src="class1.js"></script>
+    <!-- <script type="text/javascript" src="try.js"></script>  -->
 
 </html>
