--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Objective: To display weather of specified city in celcius and fahrenheit-->
 <html>
     <head>
         <meta charset='utf-8'>
-        <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
         <title>WeatherApp</title>
         <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
         <link href="style.css" rel="stylesheet">
