changing js files

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Objective: To display weather of specified city in celcius and fahrenheit-->
                     <h1 id="cityName">Banglore</h1>, <h1 id="stateName">Kranataka</h1>
                     <p id="day"></p>
                     <div class="weather">
-                        <p id="weatherName">Partly cloudy</p><img id="icon" src="download.jpg">
+                        <p id="weatherName">Partly cloudy</p><img id="icon" src="/images/download.jpg">
                     </div>
                     <h2 id="temperature"></h2>
                     <button id="celcius">&#8451;</button> |
@@ -36,8 +36,8 @@ Objective: To display weather of specified city in celcius and fahrenheit-->
         </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="app1.js"></script>
-    <script type="text/javascript" src="class1.js"></script>
+    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="class.js"></script>
     <!-- <script type="text/javascript" src="try.js"></script>  -->
 
 </html>
