reflecting js files names

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ Objective: To display weather of specified city in celcius and fahrenheit-->
         </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
-    <script type="text/javascript" src="class.js"></script>
+    <script type="text/javascript" src="/js/app.js"></script>
+    <script type="text/javascript" src="/js/class.js"></script>
     <!-- <script type="text/javascript" src="try.js"></script>  -->
 
 </html>
