--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Objective: To display weather of specified city in celcius and fahrenheit-->
                     <h1 id="cityName">Banglore</h1>, <h1 id="stateName">Kranataka</h1>
                     <p id="day"></p>
                     <div class="weather">
-                        <p id="weatherName">Partly cloudy</p><img id="icon" src="/images/download.jpg">
+                        <p id="weatherName">Partly cloudy</p><img id="icon" src="images/download.jpg">
                     </div>
                     <h2 id="temperature"></h2>
                     <button id="celcius">&#8451;</button> |
